--- a/blogFromScratch.html
+++ b/blogFromScratch.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Bacon Blog from Scratch Using HTML and CSS Only -->
 	<title>Personal Blog About Bacon</title>
 	<link rel="stylesheet" type="text/css" href="blogFromScratch.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
