--- a/blogFromScratch.html
+++ b/blogFromScratch.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<!--Bacon Blog from Scratch Using HTML and CSS Only -->
+	<!--Bacon | Fonts from Google -->
 	<title>Fun Blog About Bacon</title>
 	<link rel="stylesheet" type="text/css" href="blogFromScratch.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
